gradle files amended to publish library to bintray

--- a/util/gradle.properties
+++ b/util/gradle.properties
@@ -33,13 +33,17 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
-GROUP = com.simplaapliko
+# maven.gradle & bintray.gradle use
 
-POM_PACKAGING = aar
+VERSION_NAME = 0.9.0
+VERSION_CODE = 1
 
-POM_LICENCE_NAME = ['Apache-2.0']
-POM_LICENCE_URL = http://www.apache.org/licenses/LICENSE-2.0.txt
-POM_LICENCE_DIST = repo
-POM_DEVELOPER_ID = simplaapliko
-POM_DEVELOPER_NAME = Oleg Kan
-POM_REPO = maven
+POM_NAME = Util
+POM_ARTIFACT_ID = util
+POM_DESCRIPTION = A simple set of apis to provide basic information about the application.
+
+POM_URL = https://github.com/simplaapliko/Util
+POM_SCM_URL = https://github.com/simplaapliko/Util
+POM_SCM_CONNECTION = https://github.com/simplaapliko/Util.git
+POM_SCM_DEV_CONNECTION = https://github.com/simplaapliko/Util.git
+POM_ISSUE_TRACKER_URL = https://github.com/simplaapliko/Util/issues
