--- a/util/build.gradle
+++ b/util/build.gradle
@@ -46,6 +46,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.google.android.gms:play-services-analytics:8.4.0'
 }
 
 apply from: '../maven.gradle'
