--- a/util/gradle.properties
+++ b/util/gradle.properties
@@ -35,12 +35,12 @@
 
 # maven.gradle & bintray.gradle use
 
-VERSION_NAME = 0.9.15
-VERSION_CODE = 16
+VERSION_NAME = 1.0.0
+VERSION_CODE = 17
 
 POM_NAME = Util
 POM_ARTIFACT_ID = util
-POM_DESCRIPTION = A simple set of apis to provide basic information about the application.
+POM_DESCRIPTION = A simple library to get basic information about the application.
 
 POM_URL = https://github.com/simplaapliko/Util
 POM_SCM_URL = https://github.com/simplaapliko/Util
